--- a/src/main/resources/fxml/Autorisation.fxml
+++ b/src/main/resources/fxml/Autorisation.fxml
@@ -18,17 +18,17 @@
                   <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                     <buttons>
                       <Button fx:id="bOk" mnemonicParsing="false" onAction="#ok" text="Ok" />
-                        <Button mnemonicParsing="false" onAction="#annuler" text="Annuler" />
+                        <Button mnemonicParsing="false" onAction="#annuler" text="Cancel" />
                     </buttons>
                   </ButtonBar>
                </bottom>
                <center>
                   <BorderPane BorderPane.alignment="CENTER">
                      <center>
-                        <TextField fx:id="tfMotDePasse" maxWidth="300.0" promptText="Mot de passe" />
+                        <TextField fx:id="tfMotDePasse" maxWidth="300.0" promptText="Password" />
                      </center>
                      <top>
-                        <Label styleClass="lTitrePetit" text="Entrez le mot de passe" BorderPane.alignment="CENTER" />
+                        <Label styleClass="lTitrePetit" text="Enter the password" BorderPane.alignment="CENTER" />
                      </top>
                      <bottom>
                         <HBox prefHeight="36.0" prefWidth="520.0" spacing="20.0" BorderPane.alignment="CENTER">
@@ -37,7 +37,7 @@
                            </BorderPane.margin>
                            <children>
                               <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" styleClass="lEmphase" text="Statut:" HBox.hgrow="ALWAYS" />
-                              <Label fx:id="lStatut" maxWidth="1.7976931348623157E308" text="en attente" HBox.hgrow="ALWAYS" />
+                              <Label fx:id="lStatut" maxWidth="1.7976931348623157E308" text="waiting" HBox.hgrow="ALWAYS" />
                            </children>
                         </HBox>
                      </bottom>
