--- a/src/main/resources/fxml/InfosCompte.fxml
+++ b/src/main/resources/fxml/InfosCompte.fxml
@@ -18,13 +18,13 @@
             <bottom>
             <HBox alignment="CENTER_RIGHT" spacing="10.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button fx:id="bAlea" mnemonicParsing="false" onAction="#alea" text="Aléatoire">
+                  <Button fx:id="bAlea" mnemonicParsing="false" onAction="#alea" text="Random">
                      <HBox.margin>
                         <Insets right="20.0" />
                      </HBox.margin>
                   </Button>
                         <Button fx:id="bOk" mnemonicParsing="false" onAction="#okEdition" prefWidth="75.0" text="Ok" />
-                  <Button mnemonicParsing="false" onAction="#annulerEdition" text="Annuler" />
+                  <Button mnemonicParsing="false" onAction="#annulerEdition" text="Cancel" />
                </children>
                <BorderPane.margin>
                   <Insets />
@@ -45,16 +45,16 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label styleClass="lBold" text="Utilisateur" GridPane.halignment="RIGHT" />
-                  <Label styleClass="lBold" text="Mot de passe" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                  <Label styleClass="lBold" text="User" GridPane.halignment="RIGHT" />
+                  <Label styleClass="lBold" text="Password" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
                   <Label styleClass="lBold" text="Notes" GridPane.halignment="RIGHT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
                   </Label>
-                  <TextField fx:id="tfUtilisateur" promptText="Utilisateur [2 &lt;= longueur &lt;= 50]" GridPane.columnIndex="1" />
-                  <TextField fx:id="tfMotDePasse" promptText="Mot de passe [2 &lt;= longueur &lt;= 50]" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextArea fx:id="taNotes" prefHeight="200.0" prefWidth="200.0" promptText="(Optionnel) Notes relatives à ce compte" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <TextField fx:id="tfUtilisateur" promptText="User [2 &lt; = length &lt; = 50]" GridPane.columnIndex="1" />
+                  <TextField fx:id="tfMotDePasse" promptText="Password [2 &lt; = length &lt; = 50]" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextArea fx:id="taNotes" prefHeight="200.0" prefWidth="200.0" promptText="(Optional) Notes to this account" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                   <HBox maxHeight="0.0" spacing="10.0" GridPane.columnIndex="2" GridPane.hgrow="NEVER" GridPane.vgrow="NEVER">
                      <children>
                         <Button fx:id="bAleaU" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#aleaU" prefHeight="30.0" prefWidth="30.0" text="A" HBox.hgrow="NEVER" />
@@ -73,7 +73,7 @@
                         <Insets />
                      </GridPane.margin>
                   </HBox>
-                  <Label styleClass="lBold" text="Date de création" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+                  <Label styleClass="lBold" text="Creation date" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
                   <Label fx:id="lDateCreation" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
                <BorderPane.margin>
@@ -82,7 +82,7 @@
             </GridPane>
          </center>
          <top>
-            <Label fx:id="lTitre" styleClass="lTitre" text="Compte" BorderPane.alignment="CENTER_LEFT" />
+            <Label fx:id="lTitre" styleClass="lTitre" text="Account" BorderPane.alignment="CENTER_LEFT" />
          </top>
          <opaqueInsets>
             <Insets />
